2020/style.css
body{
    font-family: 'Assistant', sans-serif;
    font-size: 1.5vw;
    padding: 0px;
    margin: 0px;
    scroll-behavior: smooth;
}

hr{
    border: 0.08vw solid;
    background: white;
}

#julia-lima-logo-container{
    width: 4%;
}

#julia-lima-logo {
    width: 100%;
}

#projects-page-container{
    background-color: black;
    color: white;
    padding: 8vh 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#projects-page-container a{
    color:white;
}

#projects-page-main-section{
    width: 80vw;
}

#menu{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

#menu a{
    text-decoration: none;
}

#menu-header{
    flex: 1;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.menu-horizontal-separator{
    flex: 1;
    margin: 0px 2vw;
}

#menu-items{
    flex: 1;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
}

#menu-items span:last-child{
    margin-left: 4vw;
}

#main-presentation-text{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 22vh 0;
}

#presentation{
    font-size: 3vw;
    text-align: center;
    margin-bottom: 4vh;
}

#current-work{
    font-size: 2.3vw;
    margin-bottom: 7vh;
}

#current-work a{
    text-decoration: underline;
}

#email-button{
    display: flex;
    justify-content: center;
}

#main-presentation-text span:a{
    text-decoration: underline !important;
}

.project{
    padding: 3.8vw;
    margin-bottom: 7.5vh;
}

.project-1-background{
    background-color: #0036D0;
}

.project-2-background{
    background-color: #ff5600;
}

.project-3-background{
    background-color: #0D2F5E;
}

.projects-content{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.projects-content div:first-child{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-right: 1vw;
}

.project-title{
    font-size: 3vw;
    margin-bottom: -10px;
}

.project-company{
    font-size: 1.3vw;
}

.project-description{
    margin-top: 1.5vh;
    margin-bottom: 3vh;
}

.project-link a{
    text-decoration: underline;
}

.project-image-container {
    width: 50%;
}

.project-image-container img{
    width: 100%;
}

#footer{
    width: 100%;
    text-align: center;
    margin-top: 15vh;
}

.footer-last-line{
    font-size: 1.15vw;
    margin-top: 7.5vh;
}

.white-button{
    text-align: center;
    padding: 1.2vh 1.3vw;
    border: 0.1vw solid white;
    background-color: white;
    border-radius: 0.4vw;
    color: black !important;
    font-weight: bold;
    cursor: pointer;
    text-decoration: none;
}

.white-button:hover {
    background-color: black;
    color: white !important;
}


/* ABOUT PAGE */

#about-page-container{
    background-color: white;
    color: black;
    padding: 8vh 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#about-page-container a{
    color:black;
}

#about-page-main-section{
    width: 80vw;
}

#about{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.page-title{
    font-size: 3vw;
    margin: 8vh 0px;
}

.hero-img{
    margin-bottom: 8vh;
    width: 100%;
}

.hero-img img{
    width: 100%;
}

.text-container{
    margin-bottom: 8vh;
    width: 60%;
}

#cv-button a{
    text-decoration: none;
}

.black-button{
    text-align: center;
    padding: 1.2vh 1.3vw;
    border: 0.1vw solid black;
    background-color: black;
    border-radius: 0.4vw;
    color: white !important;
    font-weight: bold;
    cursor: pointer;
}

.black-button:hover {
    background-color: white;
    color: black !important;
}


/* CHECKLISTS PAGE */

#cs-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#cs-container .text-container{
    width: 100%;
}

#cs-container .text-container:last-child{
    margin-bottom: 3vh;
}

.highlight-text{
    font-size: 3vw;
    width: 60%;
    text-align: center;
    margin-bottom: 7.5vh;
}

#cs-data{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 60%;
    margin-bottom: 7.5vh;
    padding: 3vh 0px;
}

#paragraph{
    display: flex;
    flex-direction: column;
    width: 60%;
}

#paragraph h5{
    margin-bottom: 1.5vh;
    color: gray;
}

#paragraph h1{
    margin-top: 0px;
}

#myBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    font-size: 1.15vw;
    border: 0.1vw solid black;
    outline: none;
    background-color: black;
    color: white !important;
    cursor: pointer;
    padding: 0.7vw;
    border-radius: 0.4vw;
    text-decoration: none;
}
  
#myBtn:hover {
    background-color: white;
    color: black !important;
}

#projects-nav{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 60%;
    padding-top: 7.5vh;
}

#projects-nav div:first-child{
    color: gray;
    cursor: not-allowed;
}

#projects-nav div:last-child{
    color: gray;
    cursor: not-allowed;
}

#projects-nav div:first-child:before{
    content: "←";
}

#projects-nav div:last-child:after{
    content: "→";
}

@media screen and (max-width: 800px) {
    #projects-page-main-section{
        max-width: 800px;
    }

    #about-page-main-section{
        max-width: 800px;
    }

    body{
        font-size: 2vw; /* original 1.5vw | proportion 1.33 */
    }

    #presentation{
        font-size: 3.5vw;
    }
    
    #current-work{
        font-size: 2.5vw;
    }
    
    .project-title{
        font-size: 4vw;
    }
    
    .project-company{
        font-size: 1.73vw;
    }
    
    .footer-last-line{
        font-size: 1.53vw;
    }
    
    .page-title{
        font-size: 4vw;
    }
    
    .highlight-text{
        font-size: 4vw;
    }
    
    #myBtn{
        font-size: 1.53vw;
        border: 1px solid black;
    }

    #main-presentation-text{
        padding: 15vh 5vw;
    }

    .project{
        margin-bottom: 4vh;
    }

    .projects-content{
        align-items: center;
    }

    .project-image-container{
        width: 70%;
    }

    .projects-content div:first-child{
        margin-right: 3vw;
    }

    .text-container{
        width: 100%;
    }

    .highlight-text{
        width: 100%;
    }

    #cs-data{
        width: 100%;
    }
    
    #paragraph{
        width: 100%;
    }
    
    #projects-nav{
        width: 100%;
    }
}

@media screen and (max-width: 600px) {
    #projects-page-main-section{
        max-width: 600px;
    }

    #projects-page-container{
        padding: 5vh 0px;
    }

    #about-page-main-section{
        max-width: 600px;
    }

    #about-page-container{
        padding: 5vh 0px;
    }

    body{
        font-size: 3.5vw; /* original 1.5vw | proportion 2.33 */
    }

    #presentation{
        font-size: 6vw;
    }
    
    #current-work{
        font-size: 4vw;
        margin-bottom: 4vh;
    }
    
    .project-title{
        font-size: 7vw;
    }
    
    .project-company{
        font-size: 3vw; 
    }
    
    .footer-last-line{
        font-size: 2.7vw;
    }
    
    .page-title{
        font-size: 5vw;
        margin: 6vh 0px 4vh 0px;
    }
    
    .highlight-text{
        font-size: 5vw;
        margin-bottom: 5.5vh;
    }
    
    #myBtn{
        font-size: 2.7vw;
    }

    #julia-lima-logo-container{
        display: none;
    }

    .menu-horizontal-separator{
        display: none;
    }

    #menu-items span:last-child {
        margin-left: 8vw;
    }

    .white-button, .black-button{
        padding: 1.8vh 9vw;
        border-radius: 1.2vw;
        font-size: 3.5vw;
    }

    .white-button{
        border: 1px solid white;
    }

    .black-button{
        border: 1px solid black;
    }

    #main-presentation-text{
        padding: 10vh 0px;
    }

    .projects-content{
        flex-direction: column-reverse;
        text-align: center;
    }

    .projects-content div:first-child{
        margin-right: 0px;
    }

    .project{
        padding: 3.5vh 6vw;
    }

    .project-link{
        margin: 0px;
    }

    .not-on-mobile{
        display: none;
    }

    #footer{
        margin-top: 10vh;
        font-size: 3vw;
    }

    .footer-last-line{
        margin-top: 4.5vh;
    }

    #myBtn {
        font-size: 3.15vw;
        border: 1px solid black;
        padding: 3vw;
        border-radius: 1vw;
    }

    .hero-img{
        margin-bottom: 5.5vh;
    }

    #cs-data{
        flex-direction: row;
        padding: 0px;
        margin-bottom: 3.5vh;
        flex-wrap: wrap;
    }

    #cs-data > div{
        width: 50%;
        margin-bottom: 2vh;
    }

    #paragraph h5 {
        margin: 0px;
    }

    #projects-nav{
        padding-top: 0px;
    }

    #projects-nav div:first-child:before{
        font-size: 10vw;
    }

    #projects-nav div:last-child:after{
        font-size: 10vw;
    }

    #footer{
        margin-top: 8vh;
    }
}

